[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
num-derive = {version = "0.3.3", default-features = false}
num-traits = {version = "0.2.14", default-features = false}
xous = "0.9.9"
xous-ipc = "0.9.9"
log-server = { version = "0.1.3", package = "xous-api-log" }
xous-names = { version = "0.9.3", package = "xous-api-names" }
gam = {path = "../../services/gam" }
graphics-server = {path = "../../services/graphics-server" }
locales = {path = "../../locales"}
tts-frontend = {path="../../services/tts"}

[features]
tts = []
default = []
